# pokayokay

./: .gitignore  AGENTS.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  marketplace.json  package.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/spikes/: 2026-03-07-native-dispatch.md
.github/workflows/: tests.yml
agents/: yokay-security-scanner.md  yokay-spike-runner.md
auto-improve/: README.md  dashboard.json  eval.py  improvement-program.md  judge.py  pyproject.toml  runner.py  structural.py
cli/: README.md  package-lock.json  package.json
cli/src/: detect.js  doctor.js  index.js
commands/: api.md  arch.md  audit.md  test.md  ux.md  work.md
docker/: .dockerignore  Dockerfile  run-overnight.sh
docs/integrations/: README.md  kaizen.md
docs/plans/: 2025-02-04-context-efficiency-redesign.md  2026-02-09-workflow-improvements-design.md  2026-02-16-memory-orchestration-design.md  2026-02-16-memory-orchestration-impl.md  (+1 more)
hooks/: post-review-fail.sh
hooks/actions/: bridge.py  (+2 more)
memory/: MEMORY.md  chain-learnings.md
skills/: accessibility-auditor.skill  aesthetic-ui-designer.skill  api-design.skill  api-integration.skill  api-testing.skill  architecture-review.skill  figma-plugin.skill  marketing-website.skill  persona-creation.skill  prd-analyzer.skill  product-manager.skill  project-harness.skill  sdk-development.skill  session-review.skill  ux-design.skill
yokay-evals/: go.mod  test_summary_command.sh  test_summary_functional.sh  test_summary_integration.sh
(+629 files in other folders)
