[project]
name = "auto-improve"
version = "0.2.0"
description = "Autonomous skill and agent improvement system inspired by Karpathy's autoresearch"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = ["anthropic>=0.40.0"]

[project.scripts]
auto-improve-eval = "eval:main"
auto-improve-run = "runner:main"
